# ChangeLog for dev-php/File_Iterator
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/File_Iterator/ChangeLog,v 1.9 2014/03/03 23:44:30 pacho Exp $

  03 Mar 2014; Pacho Ramos <pacho@gentoo.org> File_Iterator-1.3.4.ebuild:
  amd64 stable, bug #495558

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  File_Iterator-1.3.4.ebuild:
  x86 stable wrt bug #495558

  11 Feb 2014; Jeroen Roovers <jer@gentoo.org> File_Iterator-1.3.4.ebuild:
  Stable for HPPA (bug #495558).

*File_Iterator-1.3.4 (14 Nov 2013)

  14 Nov 2013; Matti Bickel <mabi@gentoo.org> +File_Iterator-1.3.4.ebuild:
  Version bump; updated HOMEPAGE to point to github repository

  23 Jun 2013; Jeroen Roovers <jer@gentoo.org> File_Iterator-1.3.1.ebuild:
  Stable for HPPA too.

  09 Jun 2012; Matti Bickel <mabi@gentoo.org> -File_Iterator-1.2.6.ebuild:
  remove old

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  File_Iterator-1.3.1.ebuild:
  x86 stable wrt bug #408737

  20 Mar 2012; Agostino Sarubbo <ago@gentoo.org> File_Iterator-1.3.1.ebuild:
  Stable for amd64, wrt bug #408737

*file-iterator-1.3.1 (29 Jan 2012)

  29 Jan 2012; Matti Bickel <mabi@gentoo.org> +file-iterator-1.3.1.ebuild,
  -file-iterator-1.2.3.ebuild:
  version bump, remove old

*file-iterator-1.3.0 (02 Nov 2011)

  02 Nov 2011; Ole Markus With <olemarkus@gentoo.org>
  +file-iterator-1.3.0.ebuild:
  Version bump

  24 May 2011; Markos Chandras <hwoarang@gentoo.org>
  file-iterator-1.2.6.ebuild:
  Stable on amd64 wrt bug #368293

  23 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  file-iterator-1.2.6.ebuild:
  x86 stable wrt bug #368293

*file-iterator-1.2.6 (18 Mar 2011)

  18 Mar 2011; Ole Markus With <olemarkus@gentoo.org>
  +file-iterator-1.2.6.ebuild:
  Version bump

*PEAR-File_Iterator-1.2.3 (04 Oct 2010)

  04 Oct 2010; Markus Ullmann <jokey@gentoo.org>
  +PEAR-File_Iterator-1.2.3.ebuild, +metadata.xml:
  Initial import for phpunit-3.5