@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>php</herd>
+  <herd>php</herd>
+  <upstream>
+    <remote-id type="github">sebastianbergmann/php-file-iterator</remote-id>
+  </upstream>
 </pkgmetadata>
