@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/File_Iterator
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/File_Iterator/ChangeLog,v 1.9 2014/03/03 23:44:30 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/File_Iterator/ChangeLog,v 1.10 2015/06/06 19:51:53 jlec Exp $
+
+  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add github to remote-id in metadata.xml
 
   03 Mar 2014; Pacho Ramos <pacho@gentoo.org> File_Iterator-1.3.4.ebuild:
   amd64 stable, bug #495558
